Use standard way of doing params

--- a/nf/cfmsflow/TODO
+++ b/nf/cfmsflow/TODO
@@ -11,4 +11,10 @@ Figure out how to deal with getting params into processes
 
 Add options for when to generate golg standard
 
-Contrive example
+Contrive example ( or do three tries from gold standard set?)
+
+Add final optional annotation
+walktrap,and optional elution and annotations
+
+
+
