Start to fix relative paths

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 
+Make it so relative input paths work
+
+Make it so it reads a list of input files
+
 Check with python2 and python3
 
 <script src="https://ideone.com/e.js/CI2iuQ" type="text/javascript" ></script>
