--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+Progress on docker... 
+   Start with just getting everything installed
+   Then worry about the external github repositories
+
+
 
 # Test that feature selection worked
 
