--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+
+
+FYI  docker build -t clairemcwhite/cfmsflow:latest . 
+
 Progress on docker... 
    Start with just getting everything installed
    Then worry about the external github repositories
