Set up examples 1 and 2

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+Check required parameters by step...
+
+
+
 To access local files, wrap them in file() in the process definition. As in the feature_processes.nf
 See https://groups.google.com/forum/#!topic/nextflow/KjTp_M4VyKg
 
